log
Thu 09 May 2024 04:34:34 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:16: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   62 |     TreeNode * nuevo = createTreeNode(key, value);
      |                ^~~~~
treemap.c:49:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   49 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4b1bfc3
Thu 09 May 2024 04:34:49 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:15: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   62 |     TreeNode *nuevo = createTreeNode(key, value);
      |               ^~~~~
treemap.c:49:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   49 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0a26123
Thu 09 May 2024 04:34:55 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:15: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   62 |     TreeNode *nuevo = createTreeNode(key, value);
      |               ^~~~~
treemap.c:49:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   49 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f973c0
Thu 09 May 2024 04:35:44 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|8
total_score: 0/70
bcbf80d
Thu 09 May 2024 04:38:23 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
95e6721
Thu 09 May 2024 04:41:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bfbd6a2
Thu 09 May 2024 04:44:45 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
16b8d29
Thu 09 May 2024 04:45:28 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|6
total_score: 15/70
c52291a
Thu 09 May 2024 05:45:41 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
b64018f
